rlang/tests/tests_resources/invalid_tests/invalid_predicate.rlang
Predicate test1 := not location or in and workshop and location
Predicate test2 := True + 1